--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -3,20 +3,20 @@
   href: /blog/
 
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
-- name: Python
-  href: /python/
+- name: Programming
+  href: /programming/
 
 - name: Linux
   href: /linux/
 
-- name: HTML
-  href: /html/
+- name: Networking
+  href: /networking/
 
-- name: Database
-  href: /database/
+- name: Big Data
+  href: /big_data/
 
-- name: Mac
-  href: /mac/
+- name: Machine Learning
+  href: /ml/
 
 - name: Life
   href: /life/
