--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,29 +1,29 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Company A
-    i18n: company_a
+    detail: Akamai Technologies
+    i18n: Akamai Technologies
   desc:
-    detail: I worked at Company A ...
-    i18n: company_a_desc
+    detail: I worked on improving network performance, transcoding, etc.
+    i18n: I worked on improving network performance, transcoding, etc.
   date:
-    detail: Apr. 2016
-    i18n: company_a_date
+    detail: Sept. 2012
+    i18n: Sept. 2012
   job:
-    detail: CTO
-    i18n: company_a_job
+    detail: Senior Software Engineer II
+    i18n: Senior Software Engineer II
   icon: fa-plus-square
 
 - name:
-    detail: Company B
-    i18n: company_b
+    detail: FastSoft Inc.
+    i18n: FastSoft Inc.
   desc:
-    detail: I worked at Company B ...
-    i18n: company_b_desc
+    detail: I worked on next-gen TCP protocols.
+    i18n: I worked on next-gen TCP protocols.
   date:
-    detail: Jun. 2015
-    i18n: company_b_date
+    detail: Sept. 2011
+    i18n: Sept. 2011
   job:
-    detail: Full Stack Developer
-    i18n: company_b_job
+    detail: Software Engineer
+    i18n: Software Engineer
   icon: fa-plus-square
