--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Peng's Technical Hub
 description: Peng's Technical Hub including blogs, code, projects, and research.
 keywords: blogs, code, projects, research
-baseurl: homepage  # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+baseurl: /homepage  # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://pyang-1981.github.io/homepage  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /homepage/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
